<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_recommend"
        android:checked="true"
        android:icon="@drawable/like"
        android:title="@string/tab1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_order"
        android:checked="false"
        android:icon="@drawable/order"
        android:title="@string/tab2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cart"
        android:checked="false"
        android:icon="@drawable/cart"
        android:title="@string/tab3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_more"
        android:checked="false"
        android:icon="@drawable/menu"
        android:title="@string/tab4"
        app:showAsAction="ifRoom" />
</menu>