<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_button"
        android:icon="@drawable/icons8_search_50px"
        android:title="@string/search"
        android:orderInCategory="0"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_backHome"
        android:title="@string/menuItem_home"
        android:icon="@drawable/home"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_cart_createOrder"
        android:title="@string/menuItem_createOrder"
        android:icon="@drawable/createorder"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_cart_clear"
        android:title="@string/menuItem_clearAll"
        android:icon="@drawable/removecart"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>

</menu>